# Snakey

./: CMakeLists.txt  README.md  compile_commands.json  laptop_compile_commands.json.laptop
.cache/clangd/index/: Body.cpp.541E2F68AC1FD87C.idx  Body.h.1F686494FA6BE663.idx  Camera.cpp.00898150A333E71F.idx  Camera.cpp.8D79722F9C670029.idx  Camera.h.5A266D80DDC78332.idx  Camera.h.E2E8F0ABC4F3B402.idx  Cube.cpp.6487C142526ADC51.idx  Cube.cpp.E58390EE24EC6D58.idx  Cube.h.110BE4D830064ED6.idx  Cube.h.932CE915AA8760EE.idx  DeltaTime.cpp.2F19317E6628980E.idx  DeltaTime.cpp.43AA097CF60690DD.idx  DeltaTime.h.3AAB2C89AB1C3FFC.idx  DeltaTime.h.EAA42D486CAC6378.idx  HitBox.h.4406E02C20348250.idx  Player.cpp.7FC22028113DE681.idx  Player.cpp.CB50F20696301725.idx  Player.h.9F27E2CED46EF566.idx  Player.h.A811A6D02551A936.idx  Score.cpp.6A64E4193954DDE2.idx  Score.cpp.A4581AE91D6E588D.idx  Score.h.66F8CB5484FDBC2A.idx  Score.h.A2422DFC096F896C.idx  Shader.cpp.90EFABE941BBF7D5.idx  Shader.cpp.F18FED1E07F8AAC4.idx  Shader.h.16206E05B8587599.idx  Shader.h.1CA2453814A4252D.idx  _fixes.hpp.00388F60D79D0C4B.idx  _fixes.hpp.539D2AA6F1B8ADF8.idx  _vectorize.hpp.88D7C726A5EAA9B3.idx  _vectorize.hpp.FEBD93DB46396346.idx  common.hpp.CEA79B48B04FE4F7.idx  common.hpp.F83774F70F224403.idx  compute_common.hpp.B7AFBD1A1D3FA233.idx  (+483 more)
assets/shaders/: fShader.glsl  vShader.glsl
include/glad/: glad.h
src/: glad.c  main.cpp
src/entities/: Body.h  Cube.h  Player.h  Score.h
src/graphics/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
src/utilities/: DeltaTime.cpp  DeltaTime.h  HitBox.h
